# FerrisBot

./: Cargo.toml  flake.nix
src/: main.rs
src/commands/: mkwrs.rs  mod.rs  register.rs
src/jobs/: mkwrs.rs  mod.rs
src/utils/: mod.rs  user_cache.rs
