[package]
name = "ferrisbot"
version = "0.1.5"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dirs = "6.0.0"
mkwrs_scraper = { git = "https://github.com/eiiko6/mkwrs_scraper.git", version = "0.1.0" }
poise = "0.6.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
